fix: fix up spacing

--- a/src/views/product-root-docs-path-landing/components/hero/hero.module.css
+++ b/src/views/product-root-docs-path-landing/components/hero/hero.module.css
@@ -1,7 +1,3 @@
-.root {
-	padding-bottom: 48px;
-}
-
 .iconCardGridLink {
 	margin-top: 32px;
 }
